Front 위주 내용 추가

--- a/개발 과정.md
+++ b/개발 과정.md
@@ -95,7 +95,10 @@
         - service 레이어에서 xml 쿼리문으로 바로 이동
         - xml 쿼리 작성시 class명 자동완성 기능
 6. lombok
-    - 참고 URL : https://dingue.tistory.com/14
+    - 참고 URL
+        - https://dingue.tistory.com/14
+        - 설치 필요
+        https://goni9071.tistory.com/465
     - @Data 어노테이션은 하위 5개를 포함
         ```java
             @Getter
@@ -111,6 +114,9 @@
         - https://berrrrr.github.io/programming/2019/11/03/dao-vo-do-dto/
         - https://dalpaeng00.tistory.com/83
     - DAO 대신에 Mapper 사용
+8. 메세지 설정
+    - 참고 URL 
+        - https://badstorage.tistory.com/34s
 
 
 ### Thymeleaf
@@ -128,14 +134,32 @@
 
 2. 사용
     - 디펜던시 추가
-    - 
 
+3. Thymeleaf Layout Dialect 
+    - gradle 추가
+        - https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect/2.5.3
+    - 사용 방법
+        - https://amagrammer91.tistory.com/86
+        - https://dev-jwblog.tistory.com/34
+### Front
+1. Date Picker
+    - 부트스트랩 4 호환 적용
+        - https://blog.edit.kr/entry/Bootstrap-4-%EB%8B%AC%EB%A0%A5-datetimepicker-Bootstrap-3%EB%B2%84%EC%A0%84-%EC%97%85%EA%B7%B8%EB%A0%88%EC%9D%B4%EB%93%9C-%EB%B2%84%EC%A0%84-%EC%9D%B8%EA%B8%B0-%EB%8B%AC%EB%A0%A5
+        - https://getdatepicker.com/5-4/Usage/#using-locales
+2. sts4 에디터 설정
+    - 에디터에 js 에디터 사라쥠
+        - https://html6.tistory.com/415
+3. pagination
+    - https://wiki.jjagu.com/?p=407
 ### Spring Security
 
 1. Spring Security란?
     - 참고 URL
         - https://mangkyu.tistory.com/76
         - https://jeong-pro.tistory.com/205
+        - 전체 설명
+        https://jungeunlee95.github.io/java/2019/07/17/
+        https://sjh836.tistory.com/1652-Spring-Security/
     - Spring 기반의 애플리케이션의 보안(인증과 권한, 인가 등)을 담당하는 스프링 하위 프레임워크
 
 2. 패스워드 암호화와 저장
@@ -155,6 +179,22 @@
         - mapper 이용 
         https://taesan94.tistory.com/109
         https://gaemi606.tistory.com/entry/Spring-%EC%8A%A4%ED%94%84%EB%A7%81-%EC%8B%9C%ED%81%90%EB%A6%AC%ED%8B%B0Spring-Security-4-MyBatis%EC%9D%B4%EC%9A%A9-%EB%A1%9C%EA%B7%B8%EC%9D%B8
+        - 따라하기
+        https://shinsunyoung.tistory.com/78
+        https://technology-share.tistory.com/20
+        - 암호화 인코더 설정
+        https://bhsbhs235.github.io/springboot/2020/02/23/springsecurity.html
+        - message properties 설정
+        https://shinsunyoung.tistory.com/79
+        - 이해하기 쉬운 spring security
+        https://postitforhooney.tistory.com/entry/SpringSecurity-%EC%B4%88%EB%B3%B4%EC%9E%90%EA%B0%80-%EC%9D%B4%ED%95%B4%ED%95%98%EB%8A%94-Spring-Security-%ED%8D%BC%EC%98%B4
+        - spel 정리
+        https://sarc.io/index.php/java/1857-spring-boot-security
+
+### Javascript 비밀번호 암호화
+1. SHA256
+    - 참고 URL
+        - https://dlagusgh1.tistory.com/375
 
 ### Maria DB
 
